test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specified_by_identifier_empty_bracket_.sol
contract C layout at f { } { }
// ----
// ParserError 7858: (27-28): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function/error definition.
